<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ckt" />

            <LinearLayout
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="@dimen/sixteen_dp"
                    android:paddingBottom="@dimen/sixteen_dp"
                    android:text="@string/score"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/three_two_sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/scoreTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/zero"
                    android:textSize="@dimen/three_two_sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ckt" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/two_dp"
            android:layout_marginLeft="@dimen/sixteen_dp"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:layout_marginRight="@dimen/sixteen_dp"
            android:layout_marginBottom="@dimen/sixteen_dp"
            android:background="@color/colorPrimaryDark">

        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sixteen_dp"
                android:text="@string/question_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <RadioGroup
                android:id="@+id/radio_group_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/three_two_dp">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/don_bradman"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic" />

                <RadioButton
                    android:id="@+id/brain_lara"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/brian_lara"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gary_sobers"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/two_dp"
                android:layout_marginLeft="@dimen/sixteen_dp"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:layout_marginRight="@dimen/sixteen_dp"
                android:layout_marginBottom="@dimen/sixteen_dp"
                android:background="@color/colorPrimaryDark">

            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sixteen_dp"
                android:text="@string/question_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <RadioGroup
                android:id="@+id/radio_group_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/three_two_dp">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/virender_sehwag"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/martin_guptill"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic" />

                <RadioButton
                    android:id="@+id/rohit_sharma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rohit_sharma"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/two_dp"
                android:layout_marginLeft="@dimen/sixteen_dp"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:layout_marginRight="@dimen/sixteen_dp"
                android:layout_marginBottom="@dimen/sixteen_dp"
                android:background="@color/colorPrimaryDark">

            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sixteen_dp"
                android:text="@string/question_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <RadioGroup
                android:id="@+id/radio_group_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/three_two_dp">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vivian_richards"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shahid_afridi"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic" />

                <RadioButton
                    android:id="@+id/ab_devilliers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ab_de_villiers"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/two_dp"
                android:layout_marginLeft="@dimen/sixteen_dp"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:layout_marginRight="@dimen/sixteen_dp"
                android:layout_marginBottom="@dimen/sixteen_dp"
                android:background="@color/colorPrimaryDark">

            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sixteen_dp"
                android:text="@string/question_4"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/don_bradman" />

            <EditText
                android:id="@+id/answer_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/three_two_dp"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:hint="@string/type_your_answer_here" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/two_dp"
                android:layout_marginLeft="@dimen/sixteen_dp"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:layout_marginRight="@dimen/sixteen_dp"
                android:layout_marginBottom="@dimen/sixteen_dp"
                android:background="@color/colorPrimaryDark">

            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sixteen_dp"
                android:text="@string/question_5"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <CheckBox
                android:id="@+id/check_box_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/three_two_dp"
                android:text="@string/gully"
                android:textColor="@color/colorAccent"
                android:textStyle="italic" />

            <CheckBox
                android:id="@+id/check_box_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/three_two_dp"
                android:text="@string/silly_point"
                android:textColor="@color/colorAccent"
                android:textStyle="italic" />

            <CheckBox
                android:id="@+id/check_box_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/three_two_dp"
                android:text="@string/foul"
                android:textColor="@color/colorAccent"
                android:textStyle="italic" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/replay"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sixteen_dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/play_again"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/submit"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sixteen_dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>